--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@ description: Decentralized Tracing
         <br>
         In recent weeks, some concerns about certain tracking technologies have been raised by those who fear the curtailment of individual freedoms and their privacy.
         <br>
-        At CrypTool, we try to explain as well as possible what is hidden in these decentralized faking protocols so that you can form your own opinion on the subject.
+        At CrypTool, we try to explain as well as possible what is hidden in these decentralized tracing protocols so that you can form your own opinion on the subject.
     </div>
 </header>
 <article>
-    <div class="figure"></div>
+    <div class="figure">
+        <div class="step" id="step-1"></div>
+        <div class="step" id="step-2"></div>
+        <div class="step" id="step-2-5"></div>
+        <div class="step" id="step-3"></div>
+        <div class="step" id="step-4"></div>
+    </div>
     <div class="text-container">
         <div class="text">
             <h1>
