--- a/index.html
+++ b/index.html
@@ -39,57 +39,67 @@ description: Decentralized Tracing
         </div>
     </div>
 </article>
-<div class="simulation show-0">
-    <canvas id="canvas" width="300" height="300"></canvas>
-</div>
-<div class="panel show-1">
-    <div class="selector">
-        <div class="bob">Bob</div>
-        <div class="alice">Alice</div>
-        <div class="charlie">Charlie</div>
-        <div class="david">David</div>
+<div class="animation">
+    <h1>Try it yourself!</h1>
+    <div class="bold">
+        We have made a small animation, so that you can visualize each step of the protocol.
     </div>
-    <div class="row">
-        <div class="variable">Contagious</div>
-        <div class="value contagious">true</div>
+    <div class="app">
+        <div class="simulation show-0">
+            <canvas id="canvas" width="300" height="300"></canvas>
+        </div>
+        <div class="panel show-1">
+            <div class="selector">
+                <div class="bob">Bob</div>
+                <div class="alice">Alice</div>
+                <div class="charlie">Charlie</div>
+                <div class="david">David</div>
+            </div>
+            <div class="row">
+                <div class="variable">Contagious</div>
+                <div class="value contagious">true</div>
+            </div>
+            <div class="row">
+                <div class="variable">Alerted about infectivity</div>
+                <div class="value alerted">false</div>
+            </div>
+            <div class="row">
+                <div class="variable">Current EphID</div>
+                <div class="value ephid">11jUIL8...</div>
+            </div>
+            <div class="row">
+                <div class="variable">Past EphIDs</div>
+                <div class="value past show">Show</div>
+            </div>
+            <div class="row">
+                <div class="variable">EphIDs heard</div>
+                <div class="value heard show">Show</div>
+            </div>
+            <div class="row">
+                <div class="variable">Matched</div>
+                <div class="value matched">0</div>
+            </div>
+            <div class="row">
+                <button class="goto">Go to <span>park</span></button>
+                <button class="test">Test for COVID-19</button>
+            </div>
+        </div>
+        <div class="control show-2">
+            <div class="row">
+                <div class="variable">Advanced mode</div>
+                <input type="checkbox" class="value advanced">
+            </div>
+            <div class="row">
+                <div class="variable">Show server's data</div>
+                <button>Show</button>
+            </div>
+        </div>
+        <div class="selector">
+            <div class="sim">Simulation</div>
+            <div class="pan">Panel</div>
+            <div class="con">Control</div>
+        </div>
     </div>
-    <div class="row">
-        <div class="variable">Alerted about infectivity</div>
-        <div class="value alerted">false</div>
-    </div>
-    <div class="row">
-        <div class="variable">Current EphID</div>
-        <div class="value ephid">11jUIL8...</div>
-    </div>
-    <div class="row">
-        <div class="variable">Past EphIDs</div>
-        <div class="value past show">Show</div>
-    </div>
-    <div class="row">
-        <div class="variable">EphIDs heard</div>
-        <div class="value heard show">Show</div>
-    </div>
-    <div class="row">
-        <div class="variable">Matched</div>
-        <div class="value matched">0</div>
-    </div>
-    <div class="row">
-        <button class="goto">Go to <span>park</span></button>
-        <button class="test">Test for COVID-19</button>
-    </div>
-</div>
-<div class="control show-2">
-    <div class="row">
-        <div class="variable">Advanced mode</div>
-        <input type="checkbox" class="value advanced">
-    </div>
-    <div class="row">
-        <div class="variable">Show server's data</div>
-        <button>Show</button>
-    </div>
-</div>
-<div class="selector">
-    <div class="sim">Simulation</div>
-    <div class="pan">Panel</div>
-    <div class="con">Control</div>
+    <div class="scientist"></div>
+    <div class="sitting"></div>
 </div>
