Started porting the algorithms from Sven's repo

--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@ description: Decentralized Tracing
                 <div class="value alerted">false</div>
             </div>
             <div class="row">
-                <div class="variable">Current EphID</div>
-                <div class="value ephid">11jUIL8...</div>
+                <div class="variable">Secret Initial Key</div>
+                <div class="value initial">11jUIL8...</div>
             </div>
             <div class="row">
-                <div class="variable">Past EphIDs</div>
+                <div class="variable">Secret Day Key</div>
+                <div class="value day"></div>
+            </div>
+            <div class="row">
+                <div class="variable">Past EphIDs (of the day)</div>
                 <div class="value past show">Show</div>
             </div>
             <div class="row">
@@ -102,4 +106,8 @@ description: Decentralized Tracing
     </div>
     <div class="scientist"></div>
     <div class="sitting"></div>
+</div>
+
+<div class="popup">
+
 </div>
