Added popup system

--- a/index.html
+++ b/index.html
@@ -109,5 +109,11 @@ description: Decentralized Tracing
 </div>
 
 <div class="popup">
-
+    <div class="infobox">
+        <div class="cross"></div>
+        <div class="title">
+            Title
+        </div>
+        <div class="container"></div>
+    </div>
 </div>
