Added Hero image (not responsive at all)

--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@ title: COVID-19
 description: Decentralized Tracing
 ---
 <header>
-    <div class="title">
-        <h1>
-            Privacy-Preserving Contact Tracing
-        </h1>
+    <div class="text">
+        <div class="logo"></div>
+        <div class="title">
+            <h1>
+                Privacy-Preserving Contact Tracing
+            </h1>
+        </div>
+        <div class="description">
+            Across the world, governments, and health authorities are working together to find solutions to the COVID‑19 pandemic, to protect people and get society back up and running. Software developers are contributing by crafting technical tools to help combat the virus and save lives.
+            <br>
+            In recent weeks, some concerns about certain tracking technologies have been raised by those who fear the curtailment of individual freedoms and their privacy.
+            <br>
+            At CrypTool, we try to explain as well as possible what is hidden in these decentralized tracing protocols so that you can form your own opinion on the subject.
+        </div>
     </div>
-    <div class="description">
-        Across the world, governments, and health authorities are working together to find solutions to the COVID‑19 pandemic, to protect people and get society back up and running. Software developers are contributing by crafting technical tools to help combat the virus and save lives.
-        <br>
-        In recent weeks, some concerns about certain tracking technologies have been raised by those who fear the curtailment of individual freedoms and their privacy.
-        <br>
-        At CrypTool, we try to explain as well as possible what is hidden in these decentralized tracing protocols so that you can form your own opinion on the subject.
+    <div class="illustration">
+        
     </div>
 </header>
 <article>
