--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ description: Decentralized Tracing
         </div>
     </div>
     <div class="illustration">
-        
+
     </div>
 </header>
 <article>
@@ -115,6 +115,14 @@ description: Decentralized Tracing
             <div class="con">Control</div>
         </div>
     </div>
+    <footer class="container">
+        <p>
+            Made with <lunar-icon icon="heart"></lunar-icon> by <a href="https://cryptool.org">CrypTool</a>
+        </p>
+        <small>
+            Copyright &copy; {{ site.time | date: '%Y' }} CrypTool
+        </small>
+    </footer>
     <div class="scientist"></div>
     <div class="sitting"></div>
 </div>
