Translated more elements

--- a/index.html
+++ b/index.html
@@ -86,11 +86,7 @@ description: Decentralized Tracing
                 <div class="value heard show" glot-model="show">Show</div>
             </div>
             <div class="row">
-                <div class="variable" glot-model="matched">Matched</div>
-                <div class="value matched">0</div>
-            </div>
-            <div class="row">
-                <button class="goto">Go to <span>park</span></button>
+                <button class="goto">Go to park</button>
                 <button class="test" glot-model="testcovid">Test for COVID-19</button>
             </div>
         </div>
