Translated more strings

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ description: Decentralized Tracing
         </div>
         <div class="control show-2">
             <div class="row">
-                <div class="variable" glot-model="serverdata">Show server's data</div>
+                <div class="variable" glot-model="showserverdata">Show server's data</div>
                 <div class="value server show" glot-model="show">Show</div>
             </div>
             <div class="row">
