--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@ description: Decentralized Tracing
                 <div class="now">{{ site.time | date: '%H:%M' }}</div>
                 <button class="plus-min" glot-model="plus5min">+5 minutes</button>
             </div>
+            <div class="row">
+                <div class="variable" glot-model="protocol">Protocol used</div>
+                <select onchange="con.changeMode(this.value)">
+                    <option value="dp3t" selected="selected">DP-3T (Europe)</option>
+                    <option value="contacttracing">Contact Tracing (Google / Apple)</option>
+                </select>
+            </div>
         </div>
         <div class="selector">
             <div class="sim">Simulation</div>
