Improved tour + locales

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@ description: Decentralized Tracing
         <div class="selector">
             <div class="sim">Simulation</div>
             <div class="pan">Panel</div>
-            <div class="con">Control</div>
+            <div class="con">Settings</div>
         </div>
     </div>
     <footer class="container">
