--- a/src/index.html
+++ b/src/index.html
@@ -115,9 +115,9 @@ description: Decentralized Tracing
             </div>
         </div>
         <div class="selector">
-            <div class="sim">Simulation</div>
-            <div class="pan">Panel</div>
-            <div class="con">Settings</div>
+            <div class="sim" glot-model="simulation">Simulation</div>
+            <div class="pan" glot-model="persons">Persons</div>
+            <div class="con" glot-model="settings">Settings</div>
         </div>
     </div>
     <footer class="container">
