Fixed non-updating test covid button

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@ description: Decentralized Tracing
             </div>
             <div class="row">
                 <button class="goto">Go to park</button>
-                <button class="test" glot-model="testcovid">Test for COVID-19</button>
+                <button class="test">Test for COVID-19</button>
             </div>
         </div>
         <div class="control show-2">
