--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@ description: Decentralized Tracing
 </div>
 <header>
     <div class="text">
-        <div class="logo"></div>
+        <a class="logo" href="https://cryptool.org"></a>
         <div class="title">
             <h1 glot-model="title">
                 Privacy-Preserving Contact Tracing
