Added links to header

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@ description: Decentralized Tracing
             <br>
             At CrypTool, we try to explain as well as possible what is hidden in these decentralized tracing protocols so that you can form your own opinion on the subject.
         </div>
+        <div class="links">
+            <a href="#animation"><lunar-icon icon="play"></lunar-icon> <span glot-model="links-try">Try our animation</span></a>
+            <a href="https://cryptool.org/en/cto-highlights/corona-tracing"><lunar-icon icon="lab"></lunar-icon> <span glot-model="implementation">Implementation of protocols</span></a>
+        </div>
     </div>
     <div class="illustration">
 
@@ -51,7 +55,7 @@ description: Decentralized Tracing
         </div>
     </div>
 </article>
-<div class="animation">
+<div class="animation" id="animation">
     <h1 glot-model="try">Try it yourself!</h1>
     <div class="bold" glot-model="try-desc">
         We have made a small animation, so that you can visualize each step of the protocol.
