Updated locales + allowing robots to come

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@ description: Decentralized Tracing
         </div>
         <div class="links">
             <a href="#animation"><lunar-icon icon="play"></lunar-icon> <span glot-model="links-try">Try our animation</span></a>
-            <a href="https://cryptool.org/en/cto-highlights/corona-tracing"><lunar-icon icon="lab"></lunar-icon> <span glot-model="implementation">Implementation of protocols</span></a>
+            <a href="https://cryptool.org/en/cto-highlights/corona-tracing" class="corona-tracing-cto"><lunar-icon icon="lab"></lunar-icon> <span glot-model="implementation">Implementation of protocols</span></a>
         </div>
     </div>
     <div class="illustration">
