Fix locales according to Bernhard big email
+ Added screenshots
+ Fixing some of the tutorial bugs/issues

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@ description: Decentralized Tracing
     <a href="?lang=es" title="Spanish"><img width="30" height="30" src="img/lang/es.png" alt="Spanish"></a>
     <a href="?lang=fr" title="French"><img width="30" height="30" src="img/lang/fr.png" alt="French"></a>
 </div>
-<header>
+<header class="landing">
     <div class="text">
         <a class="logo" href="https://cryptool.org"></a>
         <div class="title">
