Fixed tutorial + locales

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,13 @@ description: Decentralized Tracing
             At CrypTool, we try to explain as well as possible what is hidden in these decentralized tracing protocols so that you can form your own opinion on the subject.
         </div>
         <div class="links">
-            <a href="#animation"><lunar-icon icon="play"></lunar-icon> <span glot-model="links-try">Try our animation</span></a>
-            <a href="https://cryptool.org/en/cto-highlights/corona-tracing" class="corona-tracing-cto"><lunar-icon icon="lab"></lunar-icon> <span glot-model="implementation">Implementation of protocols</span></a>
+            <a href="#animation">
+                <lunar-icon icon="play"></lunar-icon> <span glot-model="links-try">Try our animation</span>
+            </a>
+            <a href="https://cryptool.org/en/cto-highlights/corona-tracing" class="corona-tracing-cto">
+                <lunar-icon icon="lab"></lunar-icon> CTO Corona Protocol Demo 
+                <!-- <span glot-model="implementation">Implementation of protocols</span> -->
+            </a>
         </div>
     </div>
     <div class="illustration">
