Added legal links

--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,12 @@ description: Decentralized Tracing
         <small>
             Copyright &copy; {{ site.time | date: '%Y' }} CrypTool
         </small>
+        <br>
+        <small class="legal">
+            <a href="/imprint">Imprint</a>
+            <a href="/privacy">Privacy</a>
+            <a href="/LICENSE">License</a>
+        </small>
     </footer>
     <div class="scientist"></div>
     <div class="sitting"></div>
