--- a/src/index.html
+++ b/src/index.html
@@ -139,9 +139,9 @@ description: Decentralized Tracing
         <p>
             Made with <lunar-icon icon="heart"></lunar-icon> by <a href="https://cryptool.org">CrypTool</a>
         </p>
-        <small>
+        <!-- <small>
             Copyright &copy; {{ site.time | date: '%Y' }} CrypTool
-        </small>
+        </small> -->
         <br>
         <small class="legal">
             <a href="/imprint">Imprint</a>
