Sometimes, the love sign didn't appear

--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@ description: Decentralized Tracing
     </div>
     <footer class="container">
         <p>
-            Made with <lunar-icon icon="heart"></lunar-icon> by <a href="https://cryptool.org">CrypTool</a>
+            Made with <lunar-icon icon="heart">❤️</lunar-icon> by <a href="https://cryptool.org">CrypTool</a>
         </p>
         <!-- <small>
             Copyright &copy; {{ site.time | date: '%Y' }} CrypTool
