CTO demo will now open in new tab

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ description: Decentralized Tracing
             <a href="#animation">
                 <lunar-icon icon="play"></lunar-icon> <span glot-model="links-try">Try our animation</span>
             </a>
-            <a href="https://cryptool.org/en/cto-highlights/corona-tracing" class="corona-tracing-cto">
+            <a target="_blank" rel="noopener noreferrer" href="https://cryptool.org/en/cto-highlights/corona-tracing" class="corona-tracing-cto">
                 <lunar-icon icon="lab"></lunar-icon> CTO Corona Protocol Demo 
                 <!-- <span glot-model="implementation">Implementation of protocols</span> -->
             </a>
