Added notified by the app line
Signed-off-by: Arthur Guiot <arguiot@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,10 @@ description: Decentralized Tracing
                 <div class="value alerted">false</div>
             </div>
             <div class="row">
+                <div class="variable" glot-model="notified">Notified by the app</div>
+                <div class="value notified">false</div>
+            </div>
+            <div class="row">
                 <div class="variable" glot-model="initial-key">Secret Initial Key</div>
                 <div class="value initial">11jUIL8...</div>
             </div>
